--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-.App {
+.leaflet-container {
+  background-image: url('./assets/map_bg.png');
+}
+
+.map-container {
+  height: '100vh';
+  width: '100%';
+  z-index: 1;
+}
+
+.copyright {
+  background-image: linear-gradient(to right, #FFD69E, #FFFFE7);
+}
+
+.pins {
+  background: linear-gradient(0deg, #FFFFE7, #FFD69E 60%, #FFFFE7);
+  z-index: 2;
   height: 100vh;
-  width: 100%;
-  text-align: center;
 }
