--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,11 @@
   z-index: 2;
   height: 100vh;
 }
+
+.note {
+  @apply drop-shadow-lg border-8 bg-stone-900 
+    flex flex-col justify-between mr-10 mb-10 p-7 
+      w-1/3 min-h-1/2 h-min pointer-events-auto rounded-[50px];
+
+  background-image: url("./assets/scanlines.png");
+}
