--- a/src/App.css
+++ b/src/App.css
@@ -50,4 +50,14 @@
   color: #000;
   background-color: #FFF;
   border-radius: '4px';
-};
+}
+
+.region-tooltip {
+  background-color: transparent;
+  /* background-color: rgba(255, 255, 255, .5); */
+  border: none;
+  box-shadow: none;
+  color: rgb(0, 0, 0);
+  font-size: 1.3rem;
+  padding: 0 6px;
+}
