--- a/src/App.css
+++ b/src/App.css
@@ -54,10 +54,27 @@
 
 .region-tooltip {
   background-color: transparent;
-  /* background-color: rgba(255, 255, 255, .5); */
   border: none;
   box-shadow: none;
   color: rgb(0, 0, 0);
   font-size: 1.3rem;
   padding: 0 6px;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+.save-icon-background {
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient .8s ease infinite;
 }
