--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@
       min-w-1/3 min-h-1/2 h-min pointer-events-auto rounded-[50px];
 
   background-image: url('./assets/scanlines.png');
+  width: 80%;
 }
 
 .note-container {
@@ -77,4 +78,9 @@
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 	background-size: 400% 400%;
 	animation: gradient .8s ease infinite;
+}
+
+.monospace-font {
+  font-family: monospace, ui-monospace;
+  margin: 18px 0;
 }
