--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
+	animation: height .5s ease-in;
+}
+
+.island-info-overlay {
+  overflow: hidden;
+	animation: height-rise-2-24 .2s ease-in;
+}
+
+@keyframes height-rise-2-24 {
+  0% { height: 2rem; }
+  100% { height: 24rem; }
 }
 
 .log-close {
