--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  font-family: "Fira Sans", sans-serif;
+}
 
 .leaflet-container {
   background-image: url('/map_bg.png');
@@ -9,7 +15,7 @@
 .log {
   @apply drop-shadow-lg border-8 bg-stone-900
     flex flex-col justify-between p-7
-      min-w-1/3 min-h-1/2 h-min pointer-events-auto rounded-[50px];
+      min-w-1/3 min-h-1/2 h-min pointer-events-auto;
 
   background-image: url('/scanlines.png');
   width: 80%;
@@ -29,4 +35,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.leaflet-popup-content-wrapper {
+  @apply bg-gradient-to-br from-blue-900 to-indigo-900 text-white border-solid border-[1px];
+
+  border-radius: 0px;
+  min-width: 300px;
+}
+
+.leaflet-popup-tip {
+  @apply bg-gradient-to-br from-blue-900 to-indigo-900 border-solid border-[1px];
 }
