--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@
     color: #fff;
     text-align: center;
     border-radius: 6px;
-    padding: 5px 0;
+    padding: 5px;
     position: absolute;
     z-index: 1;
   }
