--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,19 @@
 .leaflet-popup-tip {
   @apply bg-gradient-to-br from-blue-900 to-indigo-900 border-solid border-[1px];
 }
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+  }
+  
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
