Adding a dark mode for the whole app (#47)
* feat: added dark mode and it's toggle button based on local storage and on user agent
fix: tweaked arrow button for expanding/collapsing the sidebar

* I forgot to remove the useless testing console.logs (sorry)
I also tweaked the overflow property of the sidebar to be only for x and in auto mode so on chromium-based browsers the scrollbar will not be present if there is nothing to scroll

* renamed customred assuming red works and removed the custom3 thing that I forgot

--- a/src/index.css
+++ b/src/index.css
@@ -34,14 +34,44 @@
 }
 
 .leaflet-popup-content-wrapper {
-  @apply bg-gradient-to-br from-blue-900 to-indigo-900 text-white border-solid border-[1px];
+  @apply bg-sidebar border-solid border-[1px];
 
   border-radius: 0px;
   min-width: 300px;
 }
 
 .leaflet-popup-tip {
-  @apply bg-gradient-to-br from-blue-900 to-indigo-900 border-solid border-[1px];
+  @apply bg-sidebar border-solid border-[1px];
+}
+
+.bg-sidebar {
+  @apply bg-beigelight text-black;
+}
+
+.dark .bg-sidebar {
+  @apply bg-gradient-to-br from-blue-950 to-indigo-950 text-white;
+}
+
+.bg-btn {
+  @apply bg-beigedark;
+}
+
+.dark .bg-btn {
+  @apply bg-blue-900;
+}
+
+.bg-btn.btn-red {
+  @apply bg-red;
+}
+
+hr {
+  border-color: currentColor;
+  @apply text-black border-t ;
+}
+
+.dark hr {
+  border-color: currentColor;
+  @apply text-white;
 }
 
 .tooltip .tooltiptext {
